# Substrate

./: .claudeignore  .dev.env  .env.example  .envrc  .geminiignore  .gitignore  .gitmodules  .mcp.json  .wt.activate  .wt.agent-env  AGENTS.md  AGENTS_PYTHON.md  AGENTS_TASKS.md  AGENTS_TYPESCRIPT.md  CLAUDE.md  GEMINI.md  Justfile  Makefile  README.md  TASKS.md  agent_harnesses_requirements.md  notebook.py  package.json  pnpm-lock.yaml  pyproject.toml  substrate.code-workspace
src/agentlayer/: pyproject.toml
src/agentlayer/agentlayer/: __init__.py  __main__.py  database.py  llm_cache.py  logging.py  normalize.py  observability.py  pipeline.py  session.py  settings.py
src/agentlayer/agentlayer/embedding/: __init__.py  identity.py  mlx.py  resilient.py
src/agentlayer/agentlayer/llm/: __init__.py  prompts.py  provider.py  reranker.py
src/agentlayer/tests/unit/: test_llm_cache.py  test_logging.py  test_normalize.py  test_observability.py  test_session.py  test_settings.py
src/catalog/: .testmondata-shm  .testmondata-wal  AGENTS.md  CLAUDE.md  TASKS.md  pyproject.toml
src/catalog/.beads/: config.yaml  issues.jsonl  last-touched
src/catalog/.claude/: settings.local.json
src/catalog/.claude/plans/: abundant-meandering-noodle.md  polymorphic-beaming-fox.md  tidy-finding-kay.md
src/catalog/adrs/: ADR-0001-hydra-job-config.md  ADR-0002-multi-database-registry.md  ADR-0003-ambient-session-contextvars.md  ADR-0004-catalog-driven-index-reconciliation.md
src/catalog/catalog/: __init__.py  __main__.py  index.py  sync.py
src/catalog/catalog/api/: __init__.py
src/catalog/catalog/cli/: __init__.py  eval.py  search.py
src/catalog/catalog/config/: __init__.py  loader.py  schema.py
src/catalog/catalog/core/: __init__.py  dev.toml  observability.py  prod.toml  settings.py  status.py  test.toml
src/catalog/catalog/embedding/: __init__.py  identity.py  mlx.py  resilient.py
src/catalog/catalog/eval/: __init__.py  golden.py  harness.py  heading_bias.py
src/catalog/catalog/index/: pipelines.py
src/catalog/catalog/ingest/: README.md  __init__.py  cache.py  directory.py  docstore_poc.py  job.py  obsidian.py  pipelines.py  pipelines_v2.py  schemas.py  sources.py  tracing.py  two_stage_poc.py
src/catalog/catalog/integrations/: __init__.py
src/catalog/catalog/llm/: __init__.py  prompts.py  provider.py  reranker.py
src/catalog/catalog/ontology/: __init__.py  schema.py  vault_schema.py
src/catalog/catalog/search/: __init__.py  comparison.py  formatting.py  fts.py  fts_chunk.py  hybrid.py  hybrid_v2.py  intent.py  models.py  postprocessors.py  query_expansion.py  rerank.py  service.py  service_v2.py  vector.py
src/catalog/catalog/store/: __init__.py  cleanup.py  database.py  dataset.py  docstore.py  fts.py  fts_chunk.py  llm_cache.py  models.py  repositories.py  schemas.py  session_context.py  vector.py
src/catalog/catalog/tests/: __init__.py
src/catalog/catalog/transform/: __init__.py  chunker.py  embedding.py  frontmatter.py  links.py  llama.py  normalize.py  obsidian.py  ontology.py  splitter.py
src/catalog/configs/: obsidian_vault.yaml  sample.yaml  sample.yaml.md
src/catalog/docs/: c2-ingestion-component-diagram.md  catalog-store-linkml.yaml  catalog-store-schema.json  data-model.md  resource-hierarchy-design.md  search-methods.md  seq-ingestion-job.md
src/catalog/docs/features/: docstore-change-detection.md
src/catalog/features/: docstore-change-detection.md  heading-bias-mitigation.md  mlx-search-warm-process-proposal.md  plan-multiDatabaseArchitecture.prompt.md  resource-hierarchy-implementation.md  search-eval-harness-implementation.md  snippet-formatters.md  split-ingest-index-pipelines.md
src/catalog/features/backlog/: ingest-model.md  search-eval-harness-status.md
src/catalog/index/: __init__.py  status.py
src/catalog/index/api/: __init__.py
src/catalog/index/cli/: __init__.py  eval.py  search.py
src/catalog/index/eval/: __init__.py  golden.py  harness.py  heading_bias.py
src/catalog/index/pipelines/: __init__.py  pipelines.py  schemas.py
src/catalog/index/search/: __init__.py  fts.py  fts_chunk.py  hybrid.py  intent.py  models.py  postprocessors.py  query_expansion.py  rerank.py  service.py  vector.py
src/catalog/index/store/: __init__.py  cleanup.py  fts.py  fts_chunk.py  vector.py
src/catalog/index/transform/: __init__.py  chunker.py  embedding.py  llama.py  splitter.py
src/catalog/tests/: TEST_CASES.md  backends.py  conftest.py
src/catalog/tests/configs/: obsidian_vault.yaml
src/catalog/tests/e2e/: conftest.py  test_catalog_e2e.py  test_qdrant_e2e.py  test_zvec_e2e.py
src/catalog/tests/features/: environment.py  ingest_fts.feature
src/catalog/tests/idx/: conftest.py
src/catalog/tests/index/: conftest.py
src/catalog/tests/rag_v2/: __init__.py  test_eval.py  test_eval_harness.py  test_fixtures.py
src/ontology/: CLAUDE.md  DESIGN.md  Makefile  README.md  alembic.ini  notes.py  pyproject.toml  service.py  settings.py
src/ontology/api/: __init__.py  app.py  dependencies.py  errors.py
src/ontology/api/routers/: __init__.py  topic.py
src/ontology/api/tests/: conftest.py  test_health_api.py  test_openapi.py  test_topic_queries.py
src/ontology/domain/: README.md  __init__.py  linkml.py
src/ontology/domain/schema/: common.yaml  document.yaml  knowledge_management.yaml  resource.yaml  topic_database.yaml  work.yaml
src/ontology/domain/tests/: conftest.py  test_work_domain.py
src/ontology/graph/: export_cypher.py
src/ontology/loader/: __init__.py  __main__.py  cli.py  loader.py  selection.py
src/ontology/loader/data/: README.md  sample_activities.yaml  sample_catalog.yaml  sample_document_classifications_comprehensive.yaml  sample_feat006_topic_suggestions.yaml  sample_information_extended.yaml  sample_relationships.yaml  (+2 more)
src/ontology/schema/: __init__.py  catalog.py  classifier.py  taxonomy.py  topic.py  utils.py
src/ontology/tests/: conftest.py  test_notes.py  test_service.py
src/ontology/utils/: logging.py  testing.py
src/python-utils/: pyproject.toml
src/python-utils/mw/: __main__.py
(+1833 files in other folders)
