[project]
name = "agentlayer"
version = "0.1.0"
description = "blah"
authors = [{ name = "Mike Waters", email = "mike@mikewaters.net" }]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "marimo==0.15.5",
    "pydantic-settings>=2.11.0",
    "loguru>=0.7.0",
    #"agentlayer@{root:uri}/src/agentlayer",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "llama-index>=0.12.0",
    "loguru>=0.7.0",
    "sqlalchemy>=2.0",
    "llama-index-core>=0.11.0",
    "llama-index-embeddings-huggingface>=0.6.1",
    "llama-index-readers-obsidian",
    "llama-index-embeddings-huggingface>=0.6.1",
    "mlx-embeddings>=0.0.5",
    "llama-index-vector-stores-duckdb>=0.5.1",
    "llama-index-storage-docstore-duckdb>=0.2.1",
]

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.hatch.build.targets.wheel]
packages = [
  "agentlayer",
]

