[project]
name = "ontolgy"
version = "0.1.0"
description = "blah"
authors = [{ name = "Mike Waters", email = "mike@mikewaters.net" }]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "agentlayer"
]

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.hatch.build.targets.wheel]
packages = [
  "ontology",
]

[tool.pytest.ini_options]
addopts = [
]

[project.scripts]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
